# SignalProcessingLabs

./: pyproject.toml
Lab1/: main.py  my_math.py
Shared/: wav.py
lab1/: main.py
lab2/: main.py
lab3/: fun_wave.py  function.py  main.py
shared/: my_math.py
