[project]
name = "signalprocessinglabs"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Kharashun",email = "nikita.kharashun@idt.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
